--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,9 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+{{!-- {{welcome-page}} --}}
+
+<ul>
+<li>{{#link-to "interns"}}Interns{{/link-to}}</li>
+</ul>
+
+{{sample "intern1" "intern2"}}
 
 {{outlet}}
